[gd_scene load_steps=5 format=3 uid="uid://j1aprtrwri6o"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_l21hk"]
[ext_resource type="PackedScene" uid="uid://dwugto6ux4704" path="res://Scenes/game_over_menu.tscn" id="2_1omhy"]
[ext_resource type="PackedScene" uid="uid://k6ya00t6jvsl" path="res://Scenes/pause_menu.tscn" id="2_3ckck"]
[ext_resource type="PackedScene" uid="uid://bx1srweqsxcq5" path="res://Scenes/options_menu.tscn" id="3_n211v"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_l21hk")

[node name="GameOverMenu" parent="." instance=ExtResource("2_1omhy")]

[node name="OptionsMenu" parent="GameOverMenu" instance=ExtResource("3_n211v")]
layout_mode = 2
anchors_preset = 0

[node name="PauseMenu" parent="." instance=ExtResource("2_3ckck")]

[node name="OptionsMenu" parent="PauseMenu" instance=ExtResource("3_n211v")]
layout_mode = 1

[connection signal="options" from="GameOverMenu" to="." method="_on_options_button_pressed"]
[connection signal="quit" from="GameOverMenu" to="." method="_on_quit_pressed"]
[connection signal="restart" from="GameOverMenu" to="." method="_on_button_pressed"]
[connection signal="exit_options_menu" from="GameOverMenu/OptionsMenu" to="." method="_on_options_menu_exit_options_menu"]
[connection signal="exit_options_menu" from="PauseMenu/OptionsMenu" to="PauseMenu" method="_on_options_menu_exit_options_menu"]
